src/auryn/tests/snapshots/auryn__auryn__tests__ui@type_mismatch_call.au.snap
---
source: src/auryn/tests/mod.rs
expression: "fn main() {\n    bar(\"not a number\")\n}\n\nfn bar(value: I32) {}\n"
input_file: src/auryn/tests/inputs/ui/type_mismatch_call.au
---
Error: Type mismatch
   ╭─[ main:2:9 ]
   │
 2 │     bar("not a number")
   │         ───────┬──────  
   │                ╰──────── Expected `I32`, but got `String`
───╯
